==> nzc21489/fatfs_pico/mmc_pico/mmc_pico.c <==
 #include "mmc_pico.h"

static
void power_on (void)
{
	gpio_init(PIN_CS);
	gpio_set_dir(PIN_CS, GPIO_OUT);
	spi_init(SPI_PORT, SPI_SPEED);
	gpio_set_function(PIN_MOSI, GPIO_FUNC_SPI);
	gpio_set_function(PIN_SCK, GPIO_FUNC_SPI);
	gpio_set_function(PIN_MISO, GPIO_FUNC_SPI);
	gpio_put(PIN_CS, 1);
	sleep_ms(100);
	gpio_put(PIN_CS, 0);

}

static
BYTE xchg_spi (BYTE dat)
{
	uint8_t buf;
	spi_read_blocking(SPI_PORT, dat, &buf, 1);
	return (BYTE)buf;	/* Get received byte */
}

static
void xmit_spi_multi (
	const BYTE* buff,	/* Data to be sent */
	UINT cnt			/* Number of bytes to send */
)
{
	spi_write_blocking(SPI_PORT, buff, cnt);
}

static
void rcvr_spi_multi (
	BYTE* buff,		/* Buffer to store received data */
	UINT cnt		/* Number of bytes to receive */
)
{
	spi_read_blocking(SPI_PORT, 0xff, buff, cnt);
}

DSTATUS disk_initialize (
	BYTE pdrv		/* Physical drive nmuber (0) */
)
{
	BYTE n, cmd, ty, ocr[4];


	if (pdrv != 0) return STA_NOINIT;	/* Supports only single drive */
	if (Stat & STA_NODISK) return Stat;	/* No card in the socket */

	power_on();							/* Initialize memory card interface */
	spi_init(SPI_PORT, SPI_SPEED_LOW);
	sleep_ms(10);
	for (n = 10; n; n--){
		xchg_spi(0xFF);	/* 80 dummy clocks */
	}

	ty = 0;
	if (send_cmd(CMD0, 0) == 1) {			/* Enter Idle state */
		if (send_cmd(CMD8, 0x1AA) == 1) {	/* SDv2? */
			for (n = 0; n < 4; n++){
				ocr[n] = xchg_spi(0xFF);			/* Get trailing return value of R7 resp */
			}
			if (ocr[2] == 0x01 && ocr[3] == 0xAA) {				/* The card can work at vdd range of 2.7-3.6V */
				uint16_t count = 0;
				for (uint16_t i = 0; i < 1000; i++){
					if (send_cmd(ACMD41, 0x40000000)){
						break;
					}else{
						sleep_ms(1);
					}
				}
				for (uint16_t i; i < 1000; i++){
					if (send_cmd(ACMD41, 0x40000000) == 0){
						break;
					}
				}
				if (send_cmd(CMD58, 0) == 0){
					sleep_ms(1);
					for (n = 0; n < 4; n++){
						ocr[n] = xchg_spi(0xFF);
					}
					ty = (ocr[0] & 0x40) ? CT_SD2|CT_BLOCK : CT_SD2;	/* SDv2+ */
				}
			}
		} else {							/* SDv1 or MMCv3 */
			if (send_cmd(ACMD41, 0) <= 1) 	{
				ty = CT_SD1; cmd = ACMD41;	/* SDv1 */
			} else {
				ty = CT_MMC; cmd = CMD1;	/* MMCv3 */
			}
			for (uint16_t i = 0; i < 1000; i++){
				if (send_cmd(cmd, 0)){
					if (i == (1000 - 1)){
						ty = 0;	/* Set read/write block length to 512 */
					}else{
						sleep_ms(1);
					}
				}else{
					if (send_cmd(CMD16, 512) != 0){
						ty = 0;	/* Set read/write block length to 512 */
					}
					break;
				}
			}
		}
	}
	CardType = ty;
	deselect();

	if (ty) {		/* Function succeded */
		Stat &= ~STA_NOINIT;	/* Clear STA_NOINIT */
		spi_init(SPI_PORT, SPI_SPEED);
	} else {		/* Function failed */
		power_off();	/* Deinitialize interface */
	}

	return Stat;
}
